Enhance user privacy protection

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "مزامنة مع السحابة",
-  "dataSynced": "تمت مزامنة البيانات بنجاح"
+  "dataSynced": "تمت مزامنة البيانات بنجاح",
+  "privacyPolicy": "سياسة الخصوصية",
+  "privacyPolicyIntro": "مقدمة",
+  "privacyPolicyIntroText": "تلتزم Kineo بحماية خصوصيتك وبياناتك الصحية. توضح هذه السياسة كيفية جمع واستخدام وتخزين وحماية معلوماتك، وفقاً لـ HIPAA و GDPR.",
+  "dataCollection": "البيانات التي نجمعها",
+  "dataCollectionText": "نجمع البيانات التالية:\n\n• الحساب: البريد الإلكتروني، الاسم (للمصادقة)\n• المستشعرات: بيانات الحركة أثناء الاختبارات\n• النتائج: التردد، السعة، الشدة\n\nنتبع مبدأ تقليل البيانات.",
+  "dataUsage": "استخدام البيانات",
+  "dataUsageText": "تُستخدم بياناتك فقط لـ:\n\n• توفير تحليل وتتبع الرعشة\n• إنشاء تقارير صحية\n• تحسين الخوارزميات (بيانات مجهولة بموافقتك)",
+  "dataStorage": "التخزين والأمان",
+  "dataStorageText": "يتم تخزين بياناتك بأمان على Google Firebase.\n\n• تشفير من طرف إلى طرف\n• TLS 1.3 لجميع الإرسالات\n• ضوابط وصول صارمة\n• تدقيقات أمنية منتظمة",
+  "dataSharing": "مشاركة البيانات",
+  "dataSharingText": "لا نبيع أبداً بياناتك الصحية.\n\nتتم مشاركة البيانات فقط:\n• بموافقتك الصريحة\n• مع مقدمي الرعاية الصحية المعينين\n• عند مطالبة القانون\n\nقد تُستخدم البيانات المجهولة للبحث.",
+  "userRights": "حقوقك (GDPR)",
+  "userRightsText": "وفقاً لـ GDPR، لديك الحق في:\n\n• الوصول: عرض جميع بياناتك\n• النقل: تصدير بياناتك\n• المحو: حذف بياناتك\n• السحب: سحب الموافقة\n• الشكوى: تقديم شكاوى للسلطات",
+  "dataSecurity": "إجراءات الأمان",
+  "dataSecurityText": "نطبق طبقات أمان متعددة:\n\n• تشفير AES-256 في الراحة\n• TLS 1.3 في النقل\n• مصادقة متعددة العوامل\n• اختبارات اختراق منتظمة\n• سجلات تدقيق شاملة\n• تدريب أمني للموظفين",
+  "contactUs": "اتصل بنا",
+  "contactUsText": "استفسارات الخصوصية: privacy@kineo-app.com",
+  "lastUpdated": "آخر تحديث",
+  "version": "الإصدار",
+  "dataManagement": "إدارة البيانات",
+  "gdprRights": "وفقاً لـ GDPR و HIPAA، يمكنك الوصول إلى بياناتك الصحية وتصديرها وحذفها في أي وقت.",
+  "exportData": "تصدير بياناتي",
+  "exportDataDescription": "قم بتنزيل نسخة كاملة من جميع بياناتك (تنسيق JSON).",
+  "export": "تصدير",
+  "exporting": "جارٍ التصدير...",
+  "exportSuccess": "تم التصدير بنجاح",
+  "exportSuccessMessage": "تم نسخ بياناتك إلى الحافظة.",
+  "deleteAllRecords": "حذف جميع السجلات",
+  "deleteAllRecordsDescription": "احذف جميع سجلات الاختبارات نهائياً. لا يمكن التراجع عن هذا الإجراء.",
+  "deleteAllData": "حذف جميع البيانات",
+  "deleteAllDataConfirm": "هل أنت متأكد من حذف جميع السجلات؟ هذا الإجراء لا رجعة فيه.",
+  "delete": "حذف",
+  "deleteSuccess": "تم الحذف بنجاح",
+  "deleteSuccessMessage": "تم حذف جميع السجلات نهائياً.",
+  "deleteAccount": "حذف الحساب",
+  "deleteAccountDescription": "احذف حسابك وجميع البيانات المرتبطة نهائياً.",
+  "deleteAccountWarning": "سيتم حذف حسابك وجميع البيانات نهائياً. لا يمكن التراجع عن هذا الإجراء.",
+  "deleteAccountFinalWarning": "تحذير أخير: بعد الحذف، سيفقد حسابك وبياناتك إلى الأبد. هل أنت متأكد؟",
+  "finalWarning": "تحذير أخير",
+  "deleteForever": "حذف نهائي",
+  "continue_": "متابعة",
+  "error": "خطأ",
+  "settings": "الإعدادات"
 }
