--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "Sincronizar en la Nube",
-  "dataSynced": "Datos sincronizados con éxito"
+  "dataSynced": "Datos sincronizados con éxito",
+  "privacyPolicy": "Política de Privacidad",
+  "privacyPolicyIntro": "Introducción",
+  "privacyPolicyIntroText": "Kineo se compromete a proteger su privacidad y datos de salud. Esta política explica cómo recopilamos, usamos, almacenamos y protegemos su información, cumpliendo con HIPAA y RGPD.",
+  "dataCollection": "Datos que Recopilamos",
+  "dataCollectionText": "Recopilamos los siguientes datos:\n\n• Cuenta: Email, nombre (autenticación)\n• Sensores: Datos de movimiento durante pruebas\n• Resultados: Frecuencia, amplitud, severidad\n\nSeguimos el principio de minimización de datos.",
+  "dataUsage": "Uso de Datos",
+  "dataUsageText": "Sus datos se usan únicamente para:\n\n• Proporcionar análisis y seguimiento de temblores\n• Generar informes de salud\n• Mejorar algoritmos (datos anónimos con consentimiento)",
+  "dataStorage": "Almacenamiento y Seguridad",
+  "dataStorageText": "Sus datos se almacenan de forma segura en Google Firebase.\n\n• Cifrado de extremo a extremo\n• TLS 1.3 para todas las transmisiones\n• Controles de acceso estrictos\n• Auditorías de seguridad regulares",
+  "dataSharing": "Compartir Datos",
+  "dataSharingText": "NUNCA vendemos sus datos de salud.\n\nLos datos solo se comparten:\n• Con su consentimiento explícito\n• Con proveedores de salud designados\n• Cuando la ley lo requiere\n\nLos datos anónimos pueden usarse para investigación.",
+  "userRights": "Sus Derechos (RGPD)",
+  "userRightsText": "Según el RGPD, tiene derecho a:\n\n• Acceso: Ver todos sus datos\n• Portabilidad: Exportar sus datos\n• Supresión: Eliminar sus datos\n• Retiro: Retirar consentimiento\n• Reclamación: Presentar quejas ante autoridades",
+  "dataSecurity": "Medidas de Seguridad",
+  "dataSecurityText": "Implementamos múltiples capas de seguridad:\n\n• Cifrado AES-256 en reposo\n• TLS 1.3 en tránsito\n• Autenticación multifactor\n• Pruebas de penetración regulares\n• Registros de auditoría completos\n• Formación de seguridad para empleados",
+  "contactUs": "Contáctenos",
+  "contactUsText": "Consultas de privacidad: privacy@kineo-app.com",
+  "lastUpdated": "Última actualización",
+  "version": "Versión",
+  "dataManagement": "Gestión de Datos",
+  "gdprRights": "Según RGPD e HIPAA, puede acceder, exportar y eliminar sus datos de salud en cualquier momento.",
+  "exportData": "Exportar mis Datos",
+  "exportDataDescription": "Descargue una copia completa de todos sus datos (formato JSON).",
+  "export": "Exportar",
+  "exporting": "Exportando...",
+  "exportSuccess": "Exportación Exitosa",
+  "exportSuccessMessage": "Sus datos han sido copiados al portapapeles.",
+  "deleteAllRecords": "Eliminar Todos los Registros",
+  "deleteAllRecordsDescription": "Elimine permanentemente todos sus registros de pruebas. Esta acción no se puede deshacer.",
+  "deleteAllData": "Eliminar Todos los Datos",
+  "deleteAllDataConfirm": "¿Está seguro de eliminar todos los registros? Esta acción es irreversible.",
+  "delete": "Eliminar",
+  "deleteSuccess": "Eliminación Exitosa",
+  "deleteSuccessMessage": "Todos sus registros han sido eliminados permanentemente.",
+  "deleteAccount": "Eliminar Cuenta",
+  "deleteAccountDescription": "Elimine permanentemente su cuenta y todos los datos asociados.",
+  "deleteAccountWarning": "Su cuenta y todos los datos serán eliminados permanentemente. Esta acción es irreversible.",
+  "deleteAccountFinalWarning": "Última advertencia: Después de eliminar, su cuenta y datos se perderán para siempre. ¿Está seguro?",
+  "finalWarning": "Última Advertencia",
+  "deleteForever": "Eliminar Permanentemente",
+  "continue_": "Continuar",
+  "error": "Error",
+  "settings": "Configuración"
 }
