--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "Synchroniser dans le Cloud",
-  "dataSynced": "Données synchronisées avec succès"
+  "dataSynced": "Données synchronisées avec succès",
+  "privacyPolicy": "Politique de Confidentialité",
+  "privacyPolicyIntro": "Introduction",
+  "privacyPolicyIntroText": "Kineo s'engage à protéger votre vie privée et vos données de santé. Cette politique explique comment nous collectons, utilisons, stockons et protégeons vos informations, conformément à HIPAA et GDPR.",
+  "dataCollection": "Données Collectées",
+  "dataCollectionText": "Nous collectons les données suivantes :\n\n• Compte : Email, nom (authentification)\n• Capteurs : Données de mouvement pendant les tests\n• Résultats : Fréquence, amplitude, sévérité\n\nNous suivons le principe de minimisation des données.",
+  "dataUsage": "Utilisation des Données",
+  "dataUsageText": "Vos données sont utilisées uniquement pour :\n\n• Fournir l'analyse et le suivi des tremblements\n• Générer des rapports de santé\n• Améliorer nos algorithmes (données anonymisées avec consentement)",
+  "dataStorage": "Stockage et Sécurité",
+  "dataStorageText": "Vos données sont stockées en sécurité sur Google Firebase.\n\n• Chiffrement de bout en bout\n• TLS 1.3 pour toutes les transmissions\n• Contrôles d'accès stricts\n• Audits de sécurité réguliers",
+  "dataSharing": "Partage des Données",
+  "dataSharingText": "Nous ne vendons JAMAIS vos données de santé.\n\nLes données sont partagées uniquement :\n• Avec votre consentement explicite\n• Avec les prestataires de soins désignés\n• Lorsque la loi l'exige\n\nLes données anonymisées peuvent être utilisées pour la recherche.",
+  "userRights": "Vos Droits (RGPD)",
+  "userRightsText": "Selon le RGPD, vous avez le droit de :\n\n• Accès : Consulter toutes vos données\n• Portabilité : Exporter vos données\n• Effacement : Supprimer vos données\n• Retrait : Retirer votre consentement\n• Réclamation : Porter plainte auprès des autorités",
+  "dataSecurity": "Mesures de Sécurité",
+  "dataSecurityText": "Nous mettons en œuvre plusieurs couches de sécurité :\n\n• Chiffrement AES-256 au repos\n• TLS 1.3 en transit\n• Authentification multifacteur\n• Tests de pénétration réguliers\n• Journaux d'audit complets\n• Formation sécurité des employés",
+  "contactUs": "Nous Contacter",
+  "contactUsText": "Questions de confidentialité : privacy@kineo-app.com",
+  "lastUpdated": "Dernière mise à jour",
+  "version": "Version",
+  "dataManagement": "Gestion des Données",
+  "gdprRights": "Selon RGPD et HIPAA, vous pouvez accéder, exporter et supprimer vos données de santé à tout moment.",
+  "exportData": "Exporter mes Données",
+  "exportDataDescription": "Téléchargez une copie complète de toutes vos données (format JSON).",
+  "export": "Exporter",
+  "exporting": "Exportation...",
+  "exportSuccess": "Export Réussi",
+  "exportSuccessMessage": "Vos données ont été copiées dans le presse-papiers.",
+  "deleteAllRecords": "Supprimer Tous les Enregistrements",
+  "deleteAllRecordsDescription": "Supprimez définitivement tous vos enregistrements de tests. Cette action est irréversible.",
+  "deleteAllData": "Supprimer Toutes les Données",
+  "deleteAllDataConfirm": "Voulez-vous vraiment supprimer tous les enregistrements ? Cette action est irréversible.",
+  "delete": "Supprimer",
+  "deleteSuccess": "Suppression Réussie",
+  "deleteSuccessMessage": "Tous vos enregistrements ont été supprimés définitivement.",
+  "deleteAccount": "Supprimer le Compte",
+  "deleteAccountDescription": "Supprimez définitivement votre compte et toutes les données associées.",
+  "deleteAccountWarning": "Votre compte et toutes les données seront supprimés définitivement. Cette action est irréversible.",
+  "deleteAccountFinalWarning": "Dernier avertissement : Après suppression, votre compte et données seront perdus à jamais. Êtes-vous sûr ?",
+  "finalWarning": "Dernier Avertissement",
+  "deleteForever": "Supprimer Définitivement",
+  "continue_": "Continuer",
+  "error": "Erreur",
+  "settings": "Paramètres"
 }
