--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "Sincronizza nel Cloud",
-  "dataSynced": "Dati sincronizzati con successo"
+  "dataSynced": "Dati sincronizzati con successo",
+  "privacyPolicy": "Informativa sulla Privacy",
+  "privacyPolicyIntro": "Introduzione",
+  "privacyPolicyIntroText": "Kineo si impegna a proteggere la tua privacy e i dati sulla salute. Questa politica spiega come raccogliamo, usiamo, archiviamo e proteggiamo le tue informazioni, in conformità con HIPAA e GDPR.",
+  "dataCollection": "Dati che Raccogliamo",
+  "dataCollectionText": "Raccogliamo i seguenti dati:\n\n• Account: Email, nome (autenticazione)\n• Sensori: Dati di movimento durante i test\n• Risultati: Frequenza, ampiezza, gravità\n\nSeguiamo il principio di minimizzazione dei dati.",
+  "dataUsage": "Uso dei Dati",
+  "dataUsageText": "I tuoi dati vengono utilizzati solo per:\n\n• Fornire analisi e tracciamento dei tremori\n• Generare rapporti sulla salute\n• Migliorare gli algoritmi (dati anonimi con consenso)",
+  "dataStorage": "Archiviazione e Sicurezza",
+  "dataStorageText": "I tuoi dati sono archiviati in modo sicuro su Google Firebase.\n\n• Crittografia end-to-end\n• TLS 1.3 per tutte le trasmissioni\n• Controlli di accesso rigorosi\n• Audit di sicurezza regolari",
+  "dataSharing": "Condivisione Dati",
+  "dataSharingText": "Non vendiamo MAI i tuoi dati sulla salute.\n\nI dati vengono condivisi solo:\n• Con il tuo consenso esplicito\n• Con i fornitori sanitari designati\n• Quando richiesto dalla legge\n\nI dati anonimi possono essere usati per la ricerca.",
+  "userRights": "I Tuoi Diritti (GDPR)",
+  "userRightsText": "Ai sensi del GDPR, hai il diritto di:\n\n• Accesso: Visualizzare tutti i tuoi dati\n• Portabilità: Esportare i tuoi dati\n• Cancellazione: Eliminare i tuoi dati\n• Revoca: Revocare il consenso\n• Reclamo: Presentare reclami alle autorità",
+  "dataSecurity": "Misure di Sicurezza",
+  "dataSecurityText": "Implementiamo più livelli di sicurezza:\n\n• Crittografia AES-256 a riposo\n• TLS 1.3 in transito\n• Autenticazione multifattore\n• Test di penetrazione regolari\n• Log di audit completi\n• Formazione sulla sicurezza dei dipendenti",
+  "contactUs": "Contattaci",
+  "contactUsText": "Domande sulla privacy: privacy@kineo-app.com",
+  "lastUpdated": "Ultimo aggiornamento",
+  "version": "Versione",
+  "dataManagement": "Gestione Dati",
+  "gdprRights": "Secondo GDPR e HIPAA, puoi accedere, esportare ed eliminare i tuoi dati sanitari in qualsiasi momento.",
+  "exportData": "Esporta i Miei Dati",
+  "exportDataDescription": "Scarica una copia completa di tutti i tuoi dati (formato JSON).",
+  "export": "Esporta",
+  "exporting": "Esportazione...",
+  "exportSuccess": "Esportazione Riuscita",
+  "exportSuccessMessage": "I tuoi dati sono stati copiati negli appunti.",
+  "deleteAllRecords": "Elimina Tutte le Registrazioni",
+  "deleteAllRecordsDescription": "Elimina permanentemente tutte le registrazioni dei test. Questa azione non può essere annullata.",
+  "deleteAllData": "Elimina Tutti i Dati",
+  "deleteAllDataConfirm": "Sei sicuro di voler eliminare tutte le registrazioni? Questa azione è irreversibile.",
+  "delete": "Elimina",
+  "deleteSuccess": "Eliminazione Riuscita",
+  "deleteSuccessMessage": "Tutte le registrazioni sono state eliminate permanentemente.",
+  "deleteAccount": "Elimina Account",
+  "deleteAccountDescription": "Elimina permanentemente il tuo account e tutti i dati associati.",
+  "deleteAccountWarning": "Il tuo account e tutti i dati verranno eliminati permanentemente. Questa azione è irreversibile.",
+  "deleteAccountFinalWarning": "Ultimo avviso: Dopo l'eliminazione, account e dati saranno persi per sempre. Sei sicuro?",
+  "finalWarning": "Ultimo Avviso",
+  "deleteForever": "Elimina per Sempre",
+  "continue_": "Continua",
+  "error": "Errore",
+  "settings": "Impostazioni"
 }
