--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "クラウドに同期",
-  "dataSynced": "データが正常に同期されました"
+  "dataSynced": "データが正常に同期されました",
+  "privacyPolicy": "プライバシーポリシー",
+  "privacyPolicyIntro": "はじめに",
+  "privacyPolicyIntroText": "Kineoはお客様のプライバシーと健康データの保護に努めています。本ポリシーでは、HIPAAおよびGDPRに準拠した情報の収集、使用、保存、保護について説明します。",
+  "dataCollection": "収集するデータ",
+  "dataCollectionText": "以下のデータを収集します：\n\n• アカウント情報：メール、名前（認証用）\n• センサーデータ：振戦テスト中の動きデータ\n• テスト結果：周波数、振幅、重症度\n\nデータ最小化の原則に従います。",
+  "dataUsage": "データの使用目的",
+  "dataUsageText": "お客様のデータは以下の目的でのみ使用されます：\n\n• 振戦分析と追跡の提供\n• 健康レポートの生成\n• アルゴリズムの改善（同意を得た匿名データのみ）",
+  "dataStorage": "データの保存とセキュリティ",
+  "dataStorageText": "お客様のデータはGoogle Firebaseに安全に保存されます。\n\n• エンドツーエンド暗号化\n• TLS 1.3によるすべての通信\n• 厳格なアクセス制御\n• 定期的なセキュリティ監査",
+  "dataSharing": "データの共有",
+  "dataSharingText": "お客様の健康データを販売することは決してありません。\n\nデータは以下の場合のみ共有されます：\n• お客様の明示的な同意がある場合\n• 指定された医療提供者との共有\n• 法律で要求された場合\n\n匿名化されたデータは研究に使用される場合があります。",
+  "userRights": "お客様の権利（GDPR）",
+  "userRightsText": "GDPRに基づき、以下の権利があります：\n\n• アクセス権：すべてのデータを閲覧\n• ポータビリティ：データをエクスポート\n• 削除権：データを削除\n• 撤回権：いつでも同意を撤回\n• 苦情申立権：監督機関への申立て",
+  "dataSecurity": "セキュリティ対策",
+  "dataSecurityText": "多層的なセキュリティ対策を実施：\n\n• AES-256静的暗号化\n• TLS 1.3転送暗号化\n• 多要素認証\n• 定期的な侵入テスト\n• 包括的な監査ログ\n• 従業員セキュリティ研修",
+  "contactUs": "お問い合わせ",
+  "contactUsText": "プライバシーに関するお問い合わせ：privacy@kineo-app.com",
+  "lastUpdated": "最終更新",
+  "version": "バージョン",
+  "dataManagement": "データ管理",
+  "gdprRights": "GDPRおよびHIPAAに基づき、お客様はいつでも個人健康データにアクセス、エクスポート、削除する権利があります。",
+  "exportData": "データをエクスポート",
+  "exportDataDescription": "すべてのデータの完全なコピーをダウンロードします（JSON形式）。",
+  "export": "エクスポート",
+  "exporting": "エクスポート中...",
+  "exportSuccess": "エクスポート成功",
+  "exportSuccessMessage": "データがクリップボードにコピーされました。",
+  "deleteAllRecords": "すべてのテスト記録を削除",
+  "deleteAllRecordsDescription": "すべての振戦テスト記録を永久に削除します。この操作は取り消せません。",
+  "deleteAllData": "すべてのデータを削除",
+  "deleteAllDataConfirm": "すべてのテスト記録を削除しますか？この操作は元に戻せません。",
+  "delete": "削除",
+  "deleteSuccess": "削除成功",
+  "deleteSuccessMessage": "すべてのテスト記録が永久に削除されました。",
+  "deleteAccount": "アカウントを削除",
+  "deleteAccountDescription": "アカウントとすべての関連データを永久に削除します。",
+  "deleteAccountWarning": "アカウントとすべてのデータが永久に削除されます。この操作は取り消せません。",
+  "deleteAccountFinalWarning": "最終警告：削除後、アカウントとデータは永久に失われます。本当によろしいですか？",
+  "finalWarning": "最終警告",
+  "deleteForever": "永久に削除",
+  "continue_": "続行",
+  "error": "エラー",
+  "settings": "設定"
 }
