--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "Sincronizar na Nuvem",
-  "dataSynced": "Dados sincronizados com sucesso"
+  "dataSynced": "Dados sincronizados com sucesso",
+  "privacyPolicy": "Política de Privacidade",
+  "privacyPolicyIntro": "Introdução",
+  "privacyPolicyIntroText": "A Kineo está comprometida em proteger sua privacidade e dados de saúde. Esta política explica como coletamos, usamos, armazenamos e protegemos suas informações, em conformidade com HIPAA e LGPD.",
+  "dataCollection": "Dados que Coletamos",
+  "dataCollectionText": "Coletamos os seguintes dados:\n\n• Conta: Email, nome (autenticação)\n• Sensores: Dados de movimento durante testes\n• Resultados: Frequência, amplitude, severidade\n\nSeguimos o princípio de minimização de dados.",
+  "dataUsage": "Uso dos Dados",
+  "dataUsageText": "Seus dados são usados apenas para:\n\n• Fornecer análise e rastreamento de tremores\n• Gerar relatórios de saúde\n• Melhorar algoritmos (dados anônimos com consentimento)",
+  "dataStorage": "Armazenamento e Segurança",
+  "dataStorageText": "Seus dados são armazenados com segurança no Google Firebase.\n\n• Criptografia de ponta a ponta\n• TLS 1.3 para todas as transmissões\n• Controles de acesso rigorosos\n• Auditorias de segurança regulares",
+  "dataSharing": "Compartilhamento de Dados",
+  "dataSharingText": "NUNCA vendemos seus dados de saúde.\n\nDados são compartilhados apenas:\n• Com seu consentimento explícito\n• Com provedores de saúde designados\n• Quando exigido por lei\n\nDados anônimos podem ser usados para pesquisa.",
+  "userRights": "Seus Direitos (LGPD)",
+  "userRightsText": "Segundo a LGPD, você tem direito a:\n\n• Acesso: Ver todos os seus dados\n• Portabilidade: Exportar seus dados\n• Exclusão: Excluir seus dados\n• Revogação: Revogar consentimento\n• Reclamação: Apresentar queixas às autoridades",
+  "dataSecurity": "Medidas de Segurança",
+  "dataSecurityText": "Implementamos múltiplas camadas de segurança:\n\n• Criptografia AES-256 em repouso\n• TLS 1.3 em trânsito\n• Autenticação multifator\n• Testes de penetração regulares\n• Logs de auditoria completos\n• Treinamento de segurança para funcionários",
+  "contactUs": "Entre em Contato",
+  "contactUsText": "Consultas de privacidade: privacy@kineo-app.com",
+  "lastUpdated": "Última atualização",
+  "version": "Versão",
+  "dataManagement": "Gestão de Dados",
+  "gdprRights": "Segundo LGPD e HIPAA, você pode acessar, exportar e excluir seus dados de saúde a qualquer momento.",
+  "exportData": "Exportar Meus Dados",
+  "exportDataDescription": "Baixe uma cópia completa de todos os seus dados (formato JSON).",
+  "export": "Exportar",
+  "exporting": "Exportando...",
+  "exportSuccess": "Exportação Bem-sucedida",
+  "exportSuccessMessage": "Seus dados foram copiados para a área de transferência.",
+  "deleteAllRecords": "Excluir Todos os Registros",
+  "deleteAllRecordsDescription": "Exclua permanentemente todos os registros de testes. Esta ação não pode ser desfeita.",
+  "deleteAllData": "Excluir Todos os Dados",
+  "deleteAllDataConfirm": "Tem certeza de que deseja excluir todos os registros? Esta ação é irreversível.",
+  "delete": "Excluir",
+  "deleteSuccess": "Exclusão Bem-sucedida",
+  "deleteSuccessMessage": "Todos os registros foram excluídos permanentemente.",
+  "deleteAccount": "Excluir Conta",
+  "deleteAccountDescription": "Exclua permanentemente sua conta e todos os dados associados.",
+  "deleteAccountWarning": "Sua conta e todos os dados serão excluídos permanentemente. Esta ação é irreversível.",
+  "deleteAccountFinalWarning": "Último aviso: Após a exclusão, sua conta e dados serão perdidos para sempre. Tem certeza?",
+  "finalWarning": "Último Aviso",
+  "deleteForever": "Excluir Permanentemente",
+  "continue_": "Continuar",
+  "error": "Erro",
+  "settings": "Configurações"
 }
