--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "Синхронизация с облаком",
-  "dataSynced": "Данные успешно синхронизированы"
+  "dataSynced": "Данные успешно синхронизированы",
+  "privacyPolicy": "Политика Конфиденциальности",
+  "privacyPolicyIntro": "Введение",
+  "privacyPolicyIntroText": "Kineo стремится защитить вашу конфиденциальность и данные о здоровье. Эта политика объясняет, как мы собираем, используем, храним и защищаем вашу информацию в соответствии с HIPAA и GDPR.",
+  "dataCollection": "Собираемые Данные",
+  "dataCollectionText": "Мы собираем следующие данные:\n\n• Аккаунт: Email, имя (аутентификация)\n• Сенсоры: Данные движения во время тестов\n• Результаты: Частота, амплитуда, тяжесть\n\nМы следуем принципу минимизации данных.",
+  "dataUsage": "Использование Данных",
+  "dataUsageText": "Ваши данные используются только для:\n\n• Анализа и отслеживания тремора\n• Создания отчётов о здоровье\n• Улучшения алгоритмов (анонимные данные с согласия)",
+  "dataStorage": "Хранение и Безопасность",
+  "dataStorageText": "Ваши данные надёжно хранятся в Google Firebase.\n\n• Сквозное шифрование\n• TLS 1.3 для всех передач\n• Строгий контроль доступа\n• Регулярные аудиты безопасности",
+  "dataSharing": "Обмен Данными",
+  "dataSharingText": "Мы НИКОГДА не продаём ваши данные о здоровье.\n\nДанные передаются только:\n• С вашего явного согласия\n• Назначенным медицинским провайдерам\n• По требованию закона\n\nАнонимные данные могут использоваться для исследований.",
+  "userRights": "Ваши Права (GDPR)",
+  "userRightsText": "Согласно GDPR, у вас есть право на:\n\n• Доступ: Просмотр всех данных\n• Переносимость: Экспорт данных\n• Удаление: Удаление данных\n• Отзыв: Отзыв согласия\n• Жалобу: Жалоба в органы",
+  "dataSecurity": "Меры Безопасности",
+  "dataSecurityText": "Мы внедряем многоуровневую безопасность:\n\n• Шифрование AES-256 в покое\n• TLS 1.3 при передаче\n• Многофакторная аутентификация\n• Регулярное тестирование на проникновение\n• Полные журналы аудита\n• Обучение безопасности сотрудников",
+  "contactUs": "Связаться с Нами",
+  "contactUsText": "Вопросы конфиденциальности: privacy@kineo-app.com",
+  "lastUpdated": "Последнее обновление",
+  "version": "Версия",
+  "dataManagement": "Управление Данными",
+  "gdprRights": "Согласно GDPR и HIPAA, вы можете получить доступ, экспортировать и удалить свои данные о здоровье в любое время.",
+  "exportData": "Экспорт Моих Данных",
+  "exportDataDescription": "Загрузите полную копию всех ваших данных (формат JSON).",
+  "export": "Экспорт",
+  "exporting": "Экспорт...",
+  "exportSuccess": "Экспорт Успешен",
+  "exportSuccessMessage": "Ваши данные скопированы в буфер обмена.",
+  "deleteAllRecords": "Удалить Все Записи",
+  "deleteAllRecordsDescription": "Навсегда удалите все записи тестов. Это действие нельзя отменить.",
+  "deleteAllData": "Удалить Все Данные",
+  "deleteAllDataConfirm": "Вы уверены, что хотите удалить все записи? Это действие необратимо.",
+  "delete": "Удалить",
+  "deleteSuccess": "Удаление Успешно",
+  "deleteSuccessMessage": "Все записи были навсегда удалены.",
+  "deleteAccount": "Удалить Аккаунт",
+  "deleteAccountDescription": "Навсегда удалите свой аккаунт и все связанные данные.",
+  "deleteAccountWarning": "Ваш аккаунт и все данные будут удалены навсегда. Это действие необратимо.",
+  "deleteAccountFinalWarning": "Последнее предупреждение: После удаления аккаунт и данные будут потеряны навсегда. Вы уверены?",
+  "finalWarning": "Последнее Предупреждение",
+  "deleteForever": "Удалить Навсегда",
+  "continue_": "Продолжить",
+  "error": "Ошибка",
+  "settings": "Настройки"
 }
