--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "同步到雲端",
-  "dataSynced": "資料同步成功"
+  "dataSynced": "資料同步成功",
+  "privacyPolicy": "隱私政策",
+  "privacyPolicyIntro": "簡介",
+  "privacyPolicyIntroText": "Kineo 致力於保護您的隱私和個人健康資料的安全。本政策說明我們如何收集、使用、儲存和保護您的資訊，符合 HIPAA 和 GDPR 法規要求。",
+  "dataCollection": "我們收集的資料",
+  "dataCollectionText": "我們收集以下資料：\n\n• 帳戶資訊：電子郵件、姓名（用於身份驗證）\n• 感測器資料：顫抖測試期間的運動資料\n• 測試結果：頻率、振幅和嚴重程度評估\n\n我們遵循資料最小化原則，只收集必要的資料。",
+  "dataUsage": "資料使用方式",
+  "dataUsageText": "您的資料僅用於以下目的：\n\n• 提供顫抖分析和健康追蹤\n• 為您和醫療保健提供者生成健康報告\n• 改進演算法（僅在您同意時使用匿名資料）",
+  "dataStorage": "資料儲存與安全",
+  "dataStorageText": "您的資料安全儲存在 Google Firebase 伺服器上。\n\n• 採用端到端加密\n• 所有傳輸使用 TLS 1.3 加密\n• 嚴格的存取控制\n• 定期安全審計",
+  "dataSharing": "資料共享",
+  "dataSharingText": "我們絕不出售您的個人健康資料。\n\n資料僅在以下情況下共享：\n• 經您明確同意\n• 與您指定的醫療保健提供者共享\n• 法律要求時\n\n彙總的匿名資料可能用於研究。",
+  "userRights": "您的權利 (GDPR)",
+  "userRightsText": "根據 GDPR，您享有以下權利：\n\n• 存取權：查看您的所有資料\n• 可攜權：匯出您的資料\n• 刪除權：刪除您的資料（被遺忘權）\n• 撤回權：隨時撤回同意\n• 投訴權：向監管機構投訴",
+  "dataSecurity": "安全措施",
+  "dataSecurityText": "我們採取多層安全措施保護您的資料：\n\n• AES-256 靜態資料加密\n• TLS 1.3 傳輸加密\n• 多因素身份驗證\n• 定期滲透測試\n• 全面的審計日誌\n• 員工安全培訓",
+  "contactUs": "聯絡我們",
+  "contactUsText": "隱私諮詢請聯絡：privacy@kineo-app.com",
+  "lastUpdated": "最後更新",
+  "version": "版本",
+  "dataManagement": "資料管理",
+  "gdprRights": "根據 GDPR 和 HIPAA，您有權隨時存取、匯出和刪除您的個人健康資料。",
+  "exportData": "匯出我的資料",
+  "exportDataDescription": "下載您所有資料的完整副本（JSON 格式）。",
+  "export": "匯出",
+  "exporting": "正在匯出...",
+  "exportSuccess": "匯出成功",
+  "exportSuccessMessage": "您的資料已複製到剪貼簿。",
+  "deleteAllRecords": "刪除所有測試記錄",
+  "deleteAllRecordsDescription": "永久刪除您的所有顫抖測試記錄。此操作無法撤銷。",
+  "deleteAllData": "刪除所有資料",
+  "deleteAllDataConfirm": "確定要刪除所有測試記錄嗎？此操作不可逆。",
+  "delete": "刪除",
+  "deleteSuccess": "刪除成功",
+  "deleteSuccessMessage": "您的所有測試記錄已永久刪除。",
+  "deleteAccount": "刪除帳戶",
+  "deleteAccountDescription": "永久刪除您的帳戶及所有相關資料。",
+  "deleteAccountWarning": "這將永久刪除您的帳戶和所有資料。此操作無法撤銷。",
+  "deleteAccountFinalWarning": "最後警告：一旦刪除，您的帳戶和所有資料將永遠消失。您確定嗎？",
+  "finalWarning": "最後警告",
+  "deleteForever": "永久刪除",
+  "continue_": "繼續",
+  "error": "錯誤",
+  "settings": "設定"
 }
