--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "In Cloud synchronisieren",
-  "dataSynced": "Daten erfolgreich synchronisiert"
+  "dataSynced": "Daten erfolgreich synchronisiert",
+  "privacyPolicy": "Datenschutzrichtlinie",
+  "privacyPolicyIntro": "Einführung",
+  "privacyPolicyIntroText": "Kineo verpflichtet sich, Ihre Privatsphäre und Gesundheitsdaten zu schützen. Diese Richtlinie erklärt, wie wir Ihre Daten gemäß HIPAA und DSGVO erfassen, verwenden, speichern und schützen.",
+  "dataCollection": "Erfasste Daten",
+  "dataCollectionText": "Wir erfassen folgende Daten:\n\n• Kontodaten: E-Mail, Name (Authentifizierung)\n• Sensordaten: Bewegungsdaten während Tests\n• Testergebnisse: Frequenz, Amplitude, Schweregrad\n\nWir folgen dem Prinzip der Datenminimierung.",
+  "dataUsage": "Datenverwendung",
+  "dataUsageText": "Ihre Daten werden ausschließlich verwendet für:\n\n• Zitteranalyse und -verfolgung\n• Erstellung von Gesundheitsberichten\n• Algorithmusverbesserung (nur anonymisierte Daten mit Zustimmung)",
+  "dataStorage": "Datenspeicherung und Sicherheit",
+  "dataStorageText": "Ihre Daten werden sicher auf Google Firebase gespeichert.\n\n• Ende-zu-Ende-Verschlüsselung\n• TLS 1.3 für alle Übertragungen\n• Strenge Zugriffskontrollen\n• Regelmäßige Sicherheitsaudits",
+  "dataSharing": "Datenweitergabe",
+  "dataSharingText": "Wir verkaufen NIEMALS Ihre Gesundheitsdaten.\n\nDaten werden nur weitergegeben:\n• Mit Ihrer ausdrücklichen Zustimmung\n• An von Ihnen benannte Gesundheitsdienstleister\n• Wenn gesetzlich vorgeschrieben\n\nAnonymisierte Daten können für Forschung verwendet werden.",
+  "userRights": "Ihre Rechte (DSGVO)",
+  "userRightsText": "Gemäß DSGVO haben Sie das Recht auf:\n\n• Auskunft: Alle Ihre Daten einsehen\n• Portabilität: Daten exportieren\n• Löschung: Daten löschen\n• Widerruf: Einwilligung jederzeit widerrufen\n• Beschwerde: Bei Behörden beschweren",
+  "dataSecurity": "Sicherheitsmaßnahmen",
+  "dataSecurityText": "Wir implementieren mehrschichtige Sicherheit:\n\n• AES-256 Ruheverschlüsselung\n• TLS 1.3 Übertragungsverschlüsselung\n• Multi-Faktor-Authentifizierung\n• Regelmäßige Penetrationstests\n• Umfassende Audit-Protokolle\n• Mitarbeiter-Sicherheitsschulung",
+  "contactUs": "Kontakt",
+  "contactUsText": "Datenschutzanfragen: privacy@kineo-app.com",
+  "lastUpdated": "Zuletzt aktualisiert",
+  "version": "Version",
+  "dataManagement": "Datenverwaltung",
+  "gdprRights": "Gemäß DSGVO und HIPAA können Sie jederzeit auf Ihre Gesundheitsdaten zugreifen, sie exportieren und löschen.",
+  "exportData": "Meine Daten Exportieren",
+  "exportDataDescription": "Laden Sie eine vollständige Kopie aller Daten herunter (JSON-Format).",
+  "export": "Exportieren",
+  "exporting": "Exportiere...",
+  "exportSuccess": "Export Erfolgreich",
+  "exportSuccessMessage": "Ihre Daten wurden in die Zwischenablage kopiert.",
+  "deleteAllRecords": "Alle Aufzeichnungen Löschen",
+  "deleteAllRecordsDescription": "Alle Zittertestaufzeichnungen dauerhaft löschen. Diese Aktion kann nicht rückgängig gemacht werden.",
+  "deleteAllData": "Alle Daten Löschen",
+  "deleteAllDataConfirm": "Möchten Sie wirklich alle Aufzeichnungen löschen? Diese Aktion ist unwiderruflich.",
+  "delete": "Löschen",
+  "deleteSuccess": "Löschen Erfolgreich",
+  "deleteSuccessMessage": "Alle Aufzeichnungen wurden dauerhaft gelöscht.",
+  "deleteAccount": "Konto Löschen",
+  "deleteAccountDescription": "Konto und alle zugehörigen Daten dauerhaft löschen.",
+  "deleteAccountWarning": "Ihr Konto und alle Daten werden dauerhaft gelöscht. Diese Aktion ist unwiderruflich.",
+  "deleteAccountFinalWarning": "Letzte Warnung: Nach dem Löschen sind Konto und Daten für immer verloren. Sind Sie sicher?",
+  "finalWarning": "Letzte Warnung",
+  "deleteForever": "Dauerhaft Löschen",
+  "continue_": "Fortfahren",
+  "error": "Fehler",
+  "settings": "Einstellungen"
 }
