--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -92,5 +92,48 @@
     }
   },
   "syncToCloud": "클라우드에 동기화",
-  "dataSynced": "데이터가 성공적으로 동기화되었습니다"
+  "dataSynced": "데이터가 성공적으로 동기화되었습니다",
+  "privacyPolicy": "개인정보 보호정책",
+  "privacyPolicyIntro": "소개",
+  "privacyPolicyIntroText": "Kineo는 귀하의 개인정보와 건강 데이터 보호에 최선을 다합니다. 본 정책은 HIPAA 및 GDPR을 준수하는 정보 수집, 사용, 저장, 보호에 대해 설명합니다.",
+  "dataCollection": "수집하는 데이터",
+  "dataCollectionText": "다음 데이터를 수집합니다:\n\n• 계정 정보: 이메일, 이름 (인증용)\n• 센서 데이터: 떨림 테스트 중 동작 데이터\n• 테스트 결과: 주파수, 진폭, 중증도\n\n데이터 최소화 원칙을 따릅니다.",
+  "dataUsage": "데이터 사용 방법",
+  "dataUsageText": "귀하의 데이터는 다음 목적으로만 사용됩니다:\n\n• 떨림 분석 및 추적 제공\n• 건강 보고서 생성\n• 알고리즘 개선 (동의 시 익명 데이터만)",
+  "dataStorage": "데이터 저장 및 보안",
+  "dataStorageText": "귀하의 데이터는 Google Firebase에 안전하게 저장됩니다.\n\n• 종단간 암호화\n• 모든 전송에 TLS 1.3\n• 엄격한 접근 제어\n• 정기 보안 감사",
+  "dataSharing": "데이터 공유",
+  "dataSharingText": "귀하의 건강 데이터를 절대 판매하지 않습니다.\n\n데이터는 다음 경우에만 공유됩니다:\n• 귀하의 명시적 동의\n• 지정된 의료 제공자와 공유\n• 법적 요구 시\n\n익명화된 데이터는 연구에 사용될 수 있습니다.",
+  "userRights": "귀하의 권리 (GDPR)",
+  "userRightsText": "GDPR에 따라 다음 권리가 있습니다:\n\n• 접근권: 모든 데이터 조회\n• 이동권: 데이터 내보내기\n• 삭제권: 데이터 삭제\n• 철회권: 언제든 동의 철회\n• 불만권: 감독 기관에 불만 제기",
+  "dataSecurity": "보안 조치",
+  "dataSecurityText": "다층적 보안 조치를 구현합니다:\n\n• AES-256 정적 암호화\n• TLS 1.3 전송 암호화\n• 다중 인증\n• 정기 침투 테스트\n• 포괄적 감사 로그\n• 직원 보안 교육",
+  "contactUs": "문의하기",
+  "contactUsText": "개인정보 관련 문의: privacy@kineo-app.com",
+  "lastUpdated": "최종 업데이트",
+  "version": "버전",
+  "dataManagement": "데이터 관리",
+  "gdprRights": "GDPR 및 HIPAA에 따라 언제든 개인 건강 데이터에 접근, 내보내기, 삭제할 권리가 있습니다.",
+  "exportData": "데이터 내보내기",
+  "exportDataDescription": "모든 데이터의 완전한 사본을 다운로드합니다 (JSON 형식).",
+  "export": "내보내기",
+  "exporting": "내보내는 중...",
+  "exportSuccess": "내보내기 성공",
+  "exportSuccessMessage": "데이터가 클립보드에 복사되었습니다.",
+  "deleteAllRecords": "모든 테스트 기록 삭제",
+  "deleteAllRecordsDescription": "모든 떨림 테스트 기록을 영구 삭제합니다. 이 작업은 취소할 수 없습니다.",
+  "deleteAllData": "모든 데이터 삭제",
+  "deleteAllDataConfirm": "모든 테스트 기록을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+  "delete": "삭제",
+  "deleteSuccess": "삭제 성공",
+  "deleteSuccessMessage": "모든 테스트 기록이 영구 삭제되었습니다.",
+  "deleteAccount": "계정 삭제",
+  "deleteAccountDescription": "계정과 모든 관련 데이터를 영구 삭제합니다.",
+  "deleteAccountWarning": "계정과 모든 데이터가 영구 삭제됩니다. 이 작업은 취소할 수 없습니다.",
+  "deleteAccountFinalWarning": "최종 경고: 삭제 후 계정과 데이터는 영원히 사라집니다. 정말 확실합니까?",
+  "finalWarning": "최종 경고",
+  "deleteForever": "영구 삭제",
+  "continue_": "계속",
+  "error": "오류",
+  "settings": "설정"
 }
