--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -97,17 +97,17 @@
   "privacyPolicyIntro": "简介",
   "privacyPolicyIntroText": "Kineo 致力于保护您的隐私和个人健康数据的安全。本政策说明我们如何收集、使用、存储和保护您的信息，符合 HIPAA 和 GDPR 法规要求。",
   "dataCollection": "我们收集的数据",
-  "dataCollectionText": "我们收集：1) 用于身份验证的账户信息（邮箱、姓名）；2) 震颤测试期间的运动传感器数据；3) 测试结果，包括频率、振幅和严重程度评估。我们遵循数据最小化原则，只收集必要的数据。",
+  "dataCollectionText": "我们收集以下数据：\n\n• 账户信息：邮箱、姓名（用于身份验证）\n• 传感器数据：震颤测试期间的运动数据\n• 测试结果：频率、振幅和严重程度评估\n\n我们遵循数据最小化原则，只收集必要的数据。",
   "dataUsage": "数据使用方式",
-  "dataUsageText": "您的数据仅用于：1) 提供震颤分析和追踪；2) 为您和您的医疗保健提供者生成健康报告；3) 改进我们的算法（仅在您同意的情况下使用匿名数据）。",
+  "dataUsageText": "您的数据仅用于以下目的：\n\n• 提供震颤分析和健康追踪\n• 为您和医疗保健提供者生成健康报告\n• 改进算法（仅在您同意时使用匿名数据）",
   "dataStorage": "数据存储与安全",
-  "dataStorageText": "您的数据安全存储在 Google Firebase 服务器上，采用端到端加密。所有数据传输使用 TLS 1.3 加密。我们实施严格的访问控制和定期安全审计。",
+  "dataStorageText": "您的数据安全存储在 Google Firebase 服务器上。\n\n• 采用端到端加密\n• 所有传输使用 TLS 1.3 加密\n• 严格的访问控制\n• 定期安全审计",
   "dataSharing": "数据共享",
-  "dataSharingText": "我们绝不出售您的个人健康数据。数据仅在以下情况下共享：1) 经您明确同意；2) 与您指定的医疗保健提供者共享；3) 法律要求时。汇总的匿名数据可能用于研究。",
+  "dataSharingText": "我们绝不出售您的个人健康数据。\n\n数据仅在以下情况下共享：\n• 经您明确同意\n• 与您指定的医疗保健提供者共享\n• 法律要求时\n\n汇总的匿名数据可能用于研究。",
   "userRights": "您的权利 (GDPR)",
-  "userRightsText": "您有权：1) 访问您的数据；2) 导出您的数据（数据可携带性）；3) 删除您的数据（被遗忘权）；4) 随时撤回同意；5) 向监管机构投诉。",
+  "userRightsText": "根据 GDPR，您享有以下权利：\n\n• 访问权：查看您的所有数据\n• 可携带权：导出您的数据\n• 删除权：删除您的数据（被遗忘权）\n• 撤回权：随时撤回同意\n• 投诉权：向监管机构投诉",
   "dataSecurity": "安全措施",
-  "dataSecurityText": "我们实施：1) AES-256 静态加密；2) TLS 1.3 传输加密；3) 多因素身份验证；4) 定期渗透测试；5) 全面的审计日志；6) 员工安全培训。",
+  "dataSecurityText": "我们采取多层安全措施保护您的数据：\n\n• AES-256 静态数据加密\n• TLS 1.3 传输加密\n• 多因素身份验证\n• 定期渗透测试\n• 全面的审计日志\n• 员工安全培训",
   "contactUs": "联系我们",
   "contactUsText": "如有隐私咨询或行使数据权利，请联系我们的数据保护官：privacy@kineo-app.com",
   "lastUpdated": "最后更新",
