Add test history feature and fix delete all records
- Add history button in tremor test page to view and delete individual records
- Fix "Delete All Records" button to properly delete local database records
- Add deleteAllTremorRecords method to DatabaseService
- Add localization strings for test history feature (12 languages)
- Remove redundant history list from data management page

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -135,5 +135,15 @@
   "deleteForever": "حذف نهائي",
   "continue_": "متابعة",
   "error": "خطأ",
-  "settings": "الإعدادات"
+  "settings": "الإعدادات",
+  "testHistory": "السجل",
+  "noTestRecords": "لا توجد سجلات اختبار",
+  "noTestRecordsHint": "أكمل اختبار الرعشة لرؤية نتائجك هنا",
+  "testDate": "تاريخ الاختبار",
+  "deleteRecord": "حذف السجل",
+  "deleteRecordConfirm": "هل أنت متأكد من حذف سجل الاختبار هذا؟",
+  "recordDeleted": "تم حذف السجل",
+  "duration": "المدة",
+  "seconds": "ث",
+  "tapToCancel": "انقر للإلغاء"
 }
